refined crystal structure text illustrations

--- a/week1/metallicStructures/index.html
+++ b/week1/metallicStructures/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 
-  <h1>Metallic Crystal Structures — Text-Based Visualizations</h1>
+  <h1>Metallic Crystal Structures</h1>
   <p>
     This webpage displays 3D ASCII art illustrations of common metallic crystal structures:
     Simple Cubic (SC), Body-Centered Cubic (BCC), and Face-Centered Cubic (FCC).
@@ -39,16 +39,15 @@
 
   <h2>Simple Cubic (SC)</h2>
   <pre>
-       o-----------o
-      /           /|
-     /           / |
-    o-----------o  |
-    |           |  |
-    |           |  |
-    |           |  o
-    |           | /
-    |           |/
-    o-----------o
+            o-----------o
+           /|          /|
+          / |         / |
+         o-----------o  |
+         |  |        |  |
+         |  o--------|--o
+         | /         | /
+         |/          |/
+         o-----------o
   </pre>
   <p>
     The simple cubic structure consists of atoms at each of the 8 corners of the cube.
@@ -57,16 +56,15 @@
 
   <h2>Body-Centered Cubic (BCC)</h2>
   <pre>
-       o-----------o
-      /           /|
-     /     o     / |
-    o-----------o  |
-    |           |  |
-    |           | o |
-    |     o     |  o
-    |           | /
-    |           |/
-    o-----------o
+            o-----------o
+           /|          /|
+          / |         / |
+         o-----------o  |
+         |  |   o    |  |
+         |  o--------|--o
+         | /         | /
+         |/          |/
+         o-----------o
   </pre>
   <p>
     The BCC structure has 8 corner atoms and 1 atom at the center of the cube.
@@ -75,13 +73,15 @@
 
   <h2>Face-Centered Cubic (FCC)</h2>
   <pre>
-       o------o
-      /|     /|
-     o·o----o·|
-     |·|    |o|
-     |o·----o·o
-     |/     |/
-     o------o
+            o-----------o
+           /|          /|
+          / |    o    / |
+         o-------o---o  |
+         | o|        | o|
+         |  o--o-----|--o
+         | /         | /
+         |/     o    |/
+         o-----------o
   </pre>
   <p>
     The FCC structure contains atoms at each corner and in the center of each face.
