responsive website first commit

--- a/week2/index.html
+++ b/week2/index.html
@@ -38,9 +38,9 @@
             font-weight: bold;
         }
 
-        .cursive [
-            font-style:
-        ]
+        .cursive {
+            font-style: italic;
+        }
 
         #addContent {
             color: darkolivegreen;
