--- a/week2/responsivePage/index.html
+++ b/week2/responsivePage/index.html
@@ -176,7 +176,7 @@
     }
 
     .hero-media img {
-        max-width: 100%
+        max-width: 100%;
         height: auto;
 
     }
@@ -325,17 +325,13 @@
         }
         .nav ul li {
           list-style: none;
-          justify-content: space-evenly;
+          justify-content: center;
           flex: 1;
         }
 
     }
 
-
-
-
-
-  </style>
+</style>
 </head>
 <body>
   <div class="wrap">
