--- a/week2/responsivePage/index.html
+++ b/week2/responsivePage/index.html
@@ -319,7 +319,7 @@
         }
         .nav ul {
           display: flex;
-          justify-content: space-evenly;
+          justify-content: center;
           flex: 1;
           gap: .75rem;
         }
