Fixed low-poly plant documentation

--- a/week4/index.html
+++ b/week4/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Low-Poly Plant – Project Documentation</title>
+  <title>Low-Poly Plant: Project Documentation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="site-header">
     <div class="header-inner">
-      <h1>Low-Poly Plant – Project Documentation</h1>
-      <p class="subtitle">Blender study of a fiddle leaf fig</p>
+      <h1>Low-Poly Plant: Project Documentation</h1>
+      <p class="subtitle">Building a house plant in Blender</p>
     </div>
   </header>
 
@@ -23,7 +23,7 @@
         for a portable weighted piano keyboard. Blender, by contrast, is built around
         polygon mesh modeling and is better suited for artistic work. Starting this
         project required me to shift away from a parametric mindset and get comfortable
-        with Blender’s less rigid but more expressive mesh workflow. After the initial
+        with Blender's less rigid but more expressive mesh workflow. After the initial
         learning curve, I came to appreciate the extra freedom Blender provides.
       </p>
     </section>
@@ -40,7 +40,7 @@
         well for low-poly forms.
       </p>
 
-      <div class="figure">
+      <div class="image-row">
         <figure>
           <img src="media/inspiration_1.jpeg" alt="Reference photo of the fiddle leaf fig plant">
           <figcaption>Reference fiddle leaf fig.</figcaption>
@@ -97,14 +97,16 @@
         stalk, then adjusted individual control points and radii in Edit Mode to create
         more organic, tapered variation along the stem and branches.
       </p>
-      <figure class="single">
-        <img src="media/process_4.png" alt="Blender screenshot of a Bézier curve stem structure">
-        <figcaption>Branching stem built from a Bézier curve.</figcaption>
-      </figure>
-      <figure class="single">
-        <img src="media/process_5.png" alt="Blender screenshot of the stem with bevel thickness">
-        <figcaption>Curve with bevel applied to create a cylindrical stem.</figcaption>
-      </figure>
+      <div class="image-row">
+        <figure>
+          <img src="media/process_4.png" alt="Blender screenshot of a Bézier curve stem structure">
+          <figcaption>Branching stem built from a Bézier curve.</figcaption>
+        </figure>
+        <figure>
+          <img src="media/process_5.png" alt="Blender screenshot of the stem with bevel thickness">
+          <figcaption>Curve with bevel applied to create a cylindrical stem.</figcaption>
+        </figure>
+      </div>
 
       <h3>Leaf Modeling</h3>
       <p>
@@ -114,7 +116,7 @@
         reference. Additional tweaks added slight bends and asymmetry to keep the leaf
         from feeling too mechanical.
       </p>
-      <div class="image-grid">
+      <div class="image-row">
         <figure>
           <img src="media/process_6.png" alt="Flat leaf mesh created from a plane">
           <figcaption>Initial leaf mesh laid out as a flat plane.</figcaption>
@@ -181,7 +183,7 @@
     </section>
 
     <footer class="site-footer">
-      <p>© 2025 – Low-Poly Plant Project</p>
+      <p>© 2025 — Low-Poly Plant Project</p>
     </footer>
   </main>
 </body>
