--- a/week5/Documentation/index.html
+++ b/week5/Documentation/index.html
@@ -81,7 +81,7 @@
 
       <h3>Table Asset Integration</h3>
       <p>
-        A table asset downloaded from Poly Haven was appended into the scene to ground
+        A table asset downloaded from <a href="https://polyhaven.com/a/wooden_table_02">Poly Haven</a> was appended into the scene to ground
         the piano and provide a sense of scale. The table was intentionally kept neutral
         so it would support the piano without drawing attention away from it.
       </p>
@@ -99,10 +99,6 @@
         aerial shot. This planned motion influenced framing and layout decisions even
         when camera constraints were temporarily disabled for still renders.
       </p>
-      <figure class="single">
-        <img src="media/process6.png" alt="Bezier curve camera path in Blender">
-        <figcaption>Bezier curve used to plan a smooth product intro camera move.</figcaption>
-      </figure>
     </section>
 
     <section id="rendering">
@@ -115,6 +111,10 @@
         rendered using the Cycles render engine for improved realism, softer shadows,
         and more accurate material response.
       </p>
+      <figure class="single">
+        <img src="media/process6.png" alt="Lighting setup for the piano render in Blender">
+        <figcaption>Lighting setup showing key, fill, and rim lights in the studio scene.</figcaption>
+      </figure>
 
       <figure class="single">
         <img src="media/render.png" alt="Final studio render of the ultra-portable piano">
