Key press "C" to change active element on button UI, color names

--- a/week8/Ptrns_rthm_mvmt/index.html
+++ b/week8/Ptrns_rthm_mvmt/index.html
@@ -261,11 +261,11 @@
     <div class="control-section">
       <div class="section-title">Color Palette</div>
       <div class="palette-grid">
-        <button class="palette-button active" data-palette="original">Original</button>
-        <button class="palette-button" data-palette="plasma">Plasma</button>
-        <button class="palette-button" data-palette="poolside">Poolside</button>
-        <button class="palette-button" data-palette="sunset">Sunset</button>
-        <button class="palette-button" data-palette="monochrome">Monochrome</button>
+        <button class="palette-button active" data-palette="bluePink">Blue-Pink</button>
+        <button class="palette-button" data-palette="violet">Violet</button>
+        <button class="palette-button" data-palette="cyanTeal">Cyan-Teal</button>
+        <button class="palette-button" data-palette="redOrange">Red-Orange</button>
+        <button class="palette-button" data-palette="grayscale">Grayscale</button>
       </div>
     </div>
 
